--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,7 +561,7 @@ a:hover {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #fff;
+  color: red;
 }
 
 .navbar .dropdown ul {
@@ -1290,7 +1290,7 @@ a:hover {
 }
 .img-fluid {
   width: 600px;
-  height: 350px;
+  height: 340px;
 }
 /*--------------------------------------------------------------
 # Blog Single
@@ -1471,27 +1471,39 @@ footer .credits a {
 
 
 
-
+.inputs {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row ;
+  justify-content: center;
+  align-items: center;
+}
 #myInput {
   background-image: url('/css/searchicon.png'); /* Add a search icon to input */
   background-position: 10px 12px; /* Position the search icon */
   background-repeat: no-repeat; /* Do not repeat the icon image */
-  width: 100%; /* Full-width */
+  width: 80%; 
+  margin: 0  auto;
   font-size: 16px; /* Increase font-size */
   padding: 12px 20px 12px 40px; /* Add some padding */
   border: 1px solid #ddd; /* Add a grey border */
   margin-bottom: 12px; /* Add some space below the input */
+
 }
 
 #myUL {
   /* Remove default list styling */
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  margin-top: 20px;
+
 }
 
 #myUL li a {
-  border: 1px solid #ddd; /* Add a border to all links */
+  border: 1px solid  grey; /* Add a border to all links */
   margin-top: -1px; /* Prevent double borders */
   background-color: #f6f6f6; /* Grey background color */
   padding: 12px; /* Add some padding */
