--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ h5,
 h6 {
   color: #1e1e1e;
 }
+#text {
+  font-size: 30px;
+  text-transform: uppercase
+}
 
 a {
   color: #1e1e1e;
@@ -768,7 +772,6 @@ a:hover {
 .hero .hero-title {
   color: #1B1B1B;
   font-weight: bold;
-  font-size: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -1524,4 +1527,11 @@ footer .credits a {
 }
 .art {
   height: 500px
+}
+.ocn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
